cabal-version: 3.14
name: draco
version: 0.1.0.0
category: Finance

common common
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Draco
  build-depends:
    base >=4.18.3.0 && <4.19

executable draco
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base,
    draco,

test-suite draco-test
  import: common
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    draco,
